add img to html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h3>hey This is X .</h3>
             </div>
             <div class="col">
-                <p>This is a column</p>
+                <ing src="images/"
             </div>
         </div>
         
