--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h3>hey This is X .</h3>
             </div>
             <div class="col">
-                <ing src="images/"
+                <ing src="images/"lolche" class="profile-ing"/.>
             </div>
         </div>
         
