--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col">
                 <h1>lolche</h1>
-                <h3>hey This is X .</h3>
+                <h3>hey This is che .</h3>
             </div>
             <div class="col">
                 <ing src="monochrome-photography-of-person-laughing-1484799.jpg"lolche" class="profile-img"/.>
