--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h3>hey This is che .</h3>
             </div>
             <div class="col">
-                <ing src="monochrome-photography-of-person-laughing-1484799.jpg"lolche" class="profile-img"/.>
+                <img src="images/monochrome-photography-of-person-laughing-1484799.jpg" alt="lolche" class="profile-img" />
             </div>
         </div>
         
