i updated the banner text

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
 <body>
     <!-- main content here -->
+   <div class="banner-text">
+       Hello you all im lolche
+        </div>
+    </div>
     <div class="content">
         <div class="row">
             <div class="col">
