--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <body>
     <!-- main content here -->
-   <div class="banner-text">
+   <div class="banner">
+        <div class="banner-text">
        Hello you all im lolche
         </div>
     </div>
