--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <h2>My Fave Animal</h2>
                 <p>TURTLEZZZ</p>
             </div>
-            <div class="col fav-2">
+            <div class="col fav-dogs">
             
             </div>
-            <div class="col fav-3">
+            <div class="col fav-horses">
                 
             </div>
         </div>
