--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             </div>
             <div class="col fav-dogs">
                 <h2>My Fave Animal 2</h2>
-                <p>Dogs</p>
+                <p>DOGSSS</p>
             </div>
             <div class="col fav-horses">
                 <h2>My Fave Animal 3</h2>
-                <p>Horses</p>
+                <p>HORSESSS</p>
             </div>
         </div>
         
