--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="row">
             <div class="col favorite-animal">
                 <h2>My Fave Animal</h2>
-                <p>TURTLEZZZ</p>
+                <p>LIONSSS</p>
             </div>
             <div class="col fav-dogs">
                 <h2>My Fave Animal 2</h2>
