add profile image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h1>lolche</h1>
                 <h3>hey This is che .</h3>
             </div>
-            <div class="col">
+            <div class="col profile-img">
                 <img src="images/monochrome-photography-of-person-laughing-1484799.jpg" alt="lolche" class="profile-img" />
             </div>
         </div>
