--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
         <divclass="row">
             <div class="col">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Y-0ethP5SvI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </>
+        </div>
+            <div class="col">
+                    <img src="https://media.giphy.com/media/5zqbFE9OeohmDgUClh/source.gif"/>
+                </div>
+            </div>
+        
         <div class="footer">
         </div>
                 
