--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <p>DOGSSS</p>
             </div>
             <div class="col fav-horses">
-                <h2>My Fave Animal 3</h2>
-                <p>HORSESSS</p>
+                <h2>My Fave Sport 3</h2>
+                <p>SOCCERRR</p>
             </div>
         </div>
         
