--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <p>LIONSSS</p>
             </div>
             <div class="col fav-dogs">
-                <h2>My Fave Animal 2</h2>
-                <p>DOGSSS</p>
+                <h2>My Fave Video game 2</h2>
+                <p>FIFAAA</p>
             </div>
             <div class="col fav-horses">
                 <h2>My Fave Sport 3</h2>
