--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                 <p>LIONSSS</p>
             </div>
             <div class="col fav-dogs">
-                <h2>My Fave Video game 2</h2>
+                <h2>My Fave Video game </h2>
                 <p>FIFAAA</p>
             </div>
             <div class="col fav-horses">
-                <h2>My Fave Sport 3</h2>
+                <h2>My Fave Sport </h2>
                 <p>SOCCERRR</p>
             </div>
         </div>
